<resources>
    <string name="app_name">QuizApp</string>
    <string name="radio_8">8</string>
    <string name="radio_9">9</string>
    <string name="radio_10">10</string>
    <string name="Jupiter">Jupiter</string>
    <string name="Mercury">Mercury</string>
    <string name="Venus">Venus</string>
    <string name="btn_display">Display</string>
    <string name="Next">Next</string>
    <string name="Score">Score</string>
    <string name="radio_yes">Yes</string>
    <string name="radio_No">No</string>
    <string name="enter_text">Enter your answer</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>