<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity"
    android:background="#87CEEB">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingLeft="20dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/question_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:paddingLeft="20dp"
            android:text="Which Planets do not have moons ?"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:padding="8dp">


            <CheckBox
                android:id="@+id/chkJupiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/Jupiter"
                android:textSize="20sp"
                android:textStyle="normal" />

            <CheckBox
                android:id="@+id/chkMercury"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/chkJupiter"
                android:layout_marginBottom="16dp"
                android:text="@string/Mercury"
                android:textSize="20sp"
                android:textStyle="normal" />

            <CheckBox
                android:id="@+id/chkVenus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/chkMercury"
                android:layout_marginBottom="16dp"
                android:text="@string/Venus"
                android:textSize="20sp"
                android:textStyle="normal" />
        </RelativeLayout>


        <Button
            android:id="@+id/submitNext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginBottom="36dp"
            android:onClick="SubmitNext2"
            android:text="Next" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/Score_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Score"
                android:textSize="24sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/Score_Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="0"
                android:textSize="24sp"
                android:textStyle="normal"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>