<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity"
    android:background="#87CEEB">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingLeft="20dp"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/question_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingLeft="20dp"
            android:text="How many Planets in solar System ?"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question_view"
            android:orientation="vertical">


            <RadioButton
                android:id="@+id/radio_Button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:checked="true"
                android:gravity="center"
                android:text="@string/radio_8"
                android:textSize="24sp" />


            <RadioButton
                android:id="@+id/radio_Button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:checked="true"
                android:gravity="center"
                android:text="@string/radio_9"
                android:textSize="24sp" />


            <RadioButton
                android:id="@+id/radio_Button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:checked="true"
                android:gravity="center"
                android:text="@string/radio_10"
                android:textSize="24sp" />


        </RadioGroup>

        <Button
            android:id="@+id/submitNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginBottom="36dp"
            android:onClick="SubmitNext"
            android:text="Next" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/Score_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Score"
                android:textSize="24sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/Score_Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="0"
                android:textSize="24sp"
                android:textStyle="normal"
                android:visibility="invisible" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>